--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -12,5 +11,36 @@ a {
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: content-box;
+font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+}
+
+button{
+  border: none;
+  color: inherit;
+  background-color: inherit;
+}
+
+
+.nav-link{
+    color: hsl(0, 0%, 75%) !important;
+    font-weight: bold;
+    font-size: 85%;
+}
+
+.nav-link:hover{
+    color: hsl(0, 0%, 20%) !important;
+}
+
+.cstm_btn{
+    background-color:  #2FCFCF;
+    color:white;
+    padding: 5px 10px;
+    border-radius: 20px;
+    border:5px solid #2FCFCF;
+}
+
+.cstm_btn:hover{
+  opacity: 0.6;
 }
