--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -33,3 +33,11 @@
 .myfooter *{
   color: white !important;
 }
+
+.url_container{
+  background-color: white;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
