api working full

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -38,6 +38,6 @@
   background-color: white;
   height: 80px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
