--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,14 @@ button{
   background-color: inherit;
 }
 
+@media (max-width: 600px) {
+  .nav-link{
+      width: 100%;
+      text-align: center;
+  }
+
+}
+
 
 .nav-link{
     color: hsl(0, 0%, 75%) !important;
