--- a/styles/Main.module.scss
+++ b/styles/Main.module.scss
@@ -1,4 +1,4 @@
-@media (max-width: 600px) {
+@media (max-width: 500px){
   .main {
     header{
       text-align: center;
@@ -9,10 +9,59 @@
         font-size: 80% !important;
       }
       button{
-      margin: 0 auto;
-}
+        margin: 0 auto;
+      }
     }
   }
+
+  .url_input{
+
+    form{
+      flex-wrap: wrap;
+
+    }
+    input{
+      width:100%;
+    }
+    button{
+      width:100%;
+    }
+  }
+
+  .statistics{
+
+    h1{
+      font-size: 180% !important;
+    }
+
+    p{
+      font-size: 80% !important;
+    }
+  }
+
+  .stats_items{
+    margin-top: 3rem !important;
+}
+
+  .states{
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+
+    hr{
+      display: none;
+    }
+  }
+
+  .stats_items_2{
+    margin-top: 0 !important;
+  }
+
+  .stats_items_3{
+    margin-top: 0 !important;
+  }
+
 }
 
 .main{
@@ -33,7 +82,6 @@
     background-color:  #2FCFCF;
     color:white;
     font-weight: bold;
-    max-width: 200px;
     padding: 5px 10px;
     border-radius: 20px;
     border:5px solid #2FCFCF;
@@ -45,7 +93,6 @@
 
   .url_input{
 
-
     min-height: 160px;
     display: flex;
     border-radius: 10px;
@@ -54,8 +101,15 @@
     background-image: url("../assets/bg-shorten-desktop.svg");
     background-repeat: no-repeat;
     background-size: cover;
+
+    button{
+      min-width: 150px;
+    }
+
     button, input{
-      font-size: 120%;
+      font-size: 110%;
+      display: inline;
+      margin-bottom: 10px;
     }
   }
 
@@ -113,6 +167,7 @@
     .states{
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
       justify-content: center;
       align-items: center;
     }
@@ -125,6 +180,19 @@
       margin-top: 10rem;
     }
 
+  }
+
+
+  .svg_container{
+    background-color: #3A3053;
+    border-radius: 50%;
+    position: absolute;
+    top: -45px;
+    width: 70px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
 
